Bug 849785 - Avoid repeated computation of local standard time vs. UTC time difference, r=waldo.